--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: run tasks on supported operating systems
-  block:
-    - import_tasks: configure.yml
-  when: ansible_os_family == "Debian" or ansible_os_family == "RedHat" 
+- name: Import configure tasks.
+  ansible.builtin.import_tasks:
+    file: configure.yml
+  when: ansible_os_family == "Debian" or ansible_os_family == "RedHat"
