--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,4 @@
 
 ansible_role_motd_issue_msg: ''
 ansible_role_motd_issue_net_msg: ''
-ansible_role_motd_backup: 'yes'
+ansible_role_motd_backup: 'true'
