--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,24 +1,26 @@
 ---
+
 galaxy_info:
   author: Mattias Jonsson
-  description: Modifies /etc/issue and /etc/issue.net on supported distributions.
-  min_ansible_version: 2.9.27
-  role_name: ansible_role_motd
+  namespace: mattias-jonsson
+  description: This Ansible role modifies the `/etc/issue` and `/etc/issue.net` files on supported distributions.
+  min_ansible_version: 2.16.0
+  role_name: issue_banner
   license: MIT
   platforms:
     - name: EL
       versions:
-        - "7"
-        - "8"
+        - all
     - name: Fedora
       versions:
-        - "32"
-        - "34"
+        - all
     - name: Debian
       versions:
-        - "bullseye"
+        - all
     - name: Ubuntu
       versions:
-        - "bionic"
-        - "focal"
-        - "jammy"
+        - all
+  galaxy_tags:
+    - banner
+    - security
+    - compliance
