--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,8 +2,8 @@
 
 - name: Set linux version fact on Debian based distros.
   ansible.builtin.set_fact:
-    ansible_role_motd_linux_version: "{{ ansible_lsb.description | regex_replace('^.* ([\\d\\.\\-]+).*?$', '\\1') }}"
-    ansible_role_motd_linux_distribution: "{{ ansible_lsb.description | regex_replace('^([\\w\\/\\s]+) [0-9]..*?$', '\\1') }}"
+    motd_linux_version: "{{ ansible_lsb.description | regex_replace('^.* ([\\d\\.\\-]+).*?$', '\\1') }}"
+    motd_linux_distribution: "{{ ansible_lsb.description | regex_replace('^([\\w\\/\\s]+) [0-9]..*?$', '\\1') }}"
   changed_when: false
   when: ansible_os_family == "Debian"
 
@@ -15,15 +15,15 @@
     owner: root
     group: root
     mode: '0644'
-    backup: '{{ ansible_role_motd_backup }}'
+    backup: '{{ issue_banner_backup }}'
   loop:
     - name: 'issue'
-      content: '{{ ansible_role_motd_issue_msg }}'
-      version: '{{ ansible_role_motd_linux_version | default([]) }}'
-      distribution: '{{ ansible_role_motd_linux_distribution | default([]) }}'
+      content: '{{ issue_banner_msg }}'
+      version: '{{ motd_linux_version | default([]) }}'
+      distribution: '{{ motd_linux_distribution | default([]) }}'
     - name: 'issue.net'
-      content: '{{ ansible_role_motd_issue_net_msg }}'
-      version: '{{ ansible_role_motd_linux_version | default([]) }}'
-      distribution: '{{ ansible_role_motd_linux_distribution | default([]) }}'
+      content: '{{ issue_banner_net_msg }}'
+      version: '{{ motd_linux_version | default([]) }}'
+      distribution: '{{ motd_linux_distribution | default([]) }}'
   loop_control:
     loop_var: file
